Remove flicker when changing page using sidebar

--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -2337,3 +2337,25 @@ textarea {
 .sidebarWrapper {
   transition: $transition-standard;
 }
+
+.app-container {
+  transition: opacity 0.15s ease;
+}
+
+.page-transition-enter {
+  opacity: 0;
+}
+
+.page-transition-enter-active {
+  opacity: 1;
+  transition: opacity 0.15s ease;
+}
+
+.page-transition-exit {
+  opacity: 1;
+}
+
+.page-transition-exit-active {
+  opacity: 0;
+  transition: opacity 0.15s ease;
+} 
