--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -1796,7 +1796,7 @@ textarea {
   flex-direction: row;
   align-items: center;
   gap: 16px;
-  border-radius: $radius-small;
+  border-radius: $radius-large;
   padding: 12px 16px;
   font-weight: 500;
   text-decoration: none!important;
