--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -289,42 +289,122 @@
 }
 
 .epicPoemCard {
-  transition: all $transition-long;
+  transition: translate $transition-long, background-color $transition-long;
   background-color: $background;
-  h2 {
-    color: $dark-900;
+  // box-shadow: $shadow-0, inset 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: $shadow-5;
+  border-radius: 4px;
+  position: relative;
+  transform: translateY(32px);
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1.2' numOctaves='1' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+    opacity: 0.05;
+    pointer-events: none;
+    z-index: 1;
+    border-radius: 4px;
+  }
+  
+  h3 {
+    color: $dark-600;
+  }
+  
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    // background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.05), transparent);
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.05) 3px, rgba(255, 255, 255, 0.5) 5px, rgba(255, 255, 255, 0.25) 7px, rgba(255, 255, 255, 0.25) 10px, rgb(0, 0, 0, 0.05) 12px, transparent 16px, rgba(255, 255, 255, 0.25) 17px, transparent 22px);
+  }
+
+  &.highlight {
+    // box-shadow: $shadow-1, inset 0 0 10px rgba(0, 0, 0, 0.2);
+    // box-shadow: $shadow-1;
+    translate: 0 0;
+    
+    &::before {
+      opacity: 0.07;
+    }
+    
+    &::after { 
+      // background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.1), transparent);
+    }
   }
   &:hover {
-    box-shadow: $shadow-1;
-    transform: scale(1.01);
+    translate: 0 -12px;
   }
 }
 
 .epicPoemCardIliad {
-  // svg path {
-  //   stroke: hsl(60, 9%, 89%);
+  background-color: $light-900;
+  svg path {
+    stroke: hsl(60, 9%, 95%);
+  }
+  
+  // @media (max-width: $breakpoint-md - 1px) {
+  //  scale: 0.95;
   // }
-  // &:hover {
+  
+  &:hover,
+  &.highlight {
     background-color: #4B2123;
-    h2 {
+    h3 {
       color: $light-900;
     }
     svg path {
       stroke: #E07443;
     }
+  }
+  // @media (max-width: $breakpoint-md - 1px) {
+  //   background-color: #4B2123;
+  //   h3 {
+  //     color: $light-900;
+  //   }
+  //   svg path {
+  //     stroke: #E07443;
+  //   }
   // }
 }
 .epicPoemCardOdyssey {
-  // svg path {
-  //   stroke: hsl(60, 9%, 89%);
-  // }
-  // &:hover {
+  background-color: $light-900;
+  svg path {
+    stroke: hsl(60, 9%, 95%);
+  }
+  p {
+    color: $dark-600;
+  }
+  &:hover,
+  &.highlight {
     background-color: #0D4F59;
-    h2 {
+    h3 {
       color: $light-900;
+    }
+    p {
+      color: $light-700;
     }
     svg path {
       stroke: #7AD7FF;
     }
+  }
+  // @media (max-width: $breakpoint-md - 1px) {
+  //   background-color: #0D4F59;
+  //   h3 {
+  //     color: $light-900;
+  //   }
+  //   p {
+  //     color: $light-700;
+  //   }
+  //   svg path {
+  //     stroke: #7AD7FF;
+  //   }
   // }
 }
