--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -17,8 +17,8 @@ body {
   font-size: 16px; 
   line-height: 1.6;
   color: $dark-800; 
-  font-weight: 500;
-  font-family: 'Marcellus', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+  font-weight: 400;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
   'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
   -webkit-font-smoothing: antialiased;
