--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -506,7 +506,7 @@ a.btn, input.btn, button.btn, div.btn {
   line-height: 32px;
   border:none;
   transition: none;
-  font-weight: 500;
+  // font-weight: 500;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -768,26 +768,44 @@ a.btn, input.btn, button.btn, div.btn {
         box-shadow: $shadow-1;
         // box-shadow: $shadow-1, inset 0px -5px 10px $dark-100;
         svg path {
-          fill: $dark-900;
+          fill: $light-900;
         }
       }
       &:active {
-        background-color: $dark-100; 
+        background-color: $light-100; 
         box-shadow: $shadow-inset-1;
       }
     }
     &.low {
-      color: $dark-900; 
+      color: $light-900; 
 
       svg path {
-        fill: $dark-900;
+        fill: $light-900;
       }
       &:hover {
-        color: $dark-900; 
+        color: $light-900; 
         box-shadow: $shadow-0;
+        // background-color: $light-300; 
       }
       &:active {
-        background-color: $dark-100; 
+        background-color: $light-100; 
+        box-shadow: $shadow-inset-1;
+      }
+    }
+    &.ultraLow {
+      color: $light-700; 
+      svg path {
+        fill: $light-700;
+      }
+      &:hover {
+        color: $light-900; 
+        box-shadow: $shadow-0;
+        svg path {
+          fill: $light-900;
+        }
+      }
+      &:active {
+        background-color: $light-100; 
         box-shadow: $shadow-inset-1;
       }
     }
